Sat Jun 18 00:20:54 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: do not define wnum[01].

Fri Jun 17 18:57:36 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* compile.c (iseq_compile_each): fix return value of obj[a,*b]=c.

Fri Jun 17 13:09:45 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/curses/curses.c:  Clean up documentation.

Fri Jun 17 09:25:14 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/curses/curses.c:  Document curses constants.  Patch by Vincent
	  Batts.  [Ruby 1.9 - Bug #4880]

Fri Jun 17 09:11:05 2011  Eric Hodel  <drbrain@segment7.net>

	* object.c:  Document Module#method_added and #method_removed.
	  Patch by Bryce Kerley.  [Ruby 1.9 - Feature #4867]

Fri Jun 17 08:50:16 2011  Eric Hodel  <drbrain@segment7.net>

	* io.c:  Improve documentation of IO and File open and new.
	  Patch by Roger Pack.  [Ruby 1.9 - Bug #4790]

Fri Jun 17 07:53:50 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/csv.rb:  Document #raw_encoding.  Patch by David Czarnecki.
	  [Ruby 1.9 - Bug #4874]

Fri Jun 17 07:46:50 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/benchmark.rb:  Document Benchmark::Tms#memberwise.  Patch by
	  David Czarnecki.  [Ruby 1.9 - Bug #4873]

Fri Jun 17 07:38:31 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/prettyprint.rb:  Improve documentation.  Patch by Ysiad
	  Ferreiras.  [#4834]

Fri Jun 17 07:23:03 2011  Eric Hodel  <drbrain@segment7.net>

	* array.c (rb_ary_drop):  Improve documentation.  Patch by Caley Woods.
	  [Ruby 1.9 - Bug #4858]

Fri Jun 17 06:11:31 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/webrick/log.rb:  Improve documentation of BasicLog and Log.
	  Patch by Olivier Brisse.  [Ruby 1.9 - Bug #4833]
	* lib/webrick/httpstatus.rb:  Improve documentation of
	  WEBrick::HTTPStatus.  Patch by Olivier Brisse.
	  [Ruby 1.9 - Bug #4833]

Fri Jun 17 04:48:22 2011  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.c, thread_pthread.h: remove unused variables.