@@ -1,3 +1,15 @@
+Sat Jun 18 02:30:00 2011  Kenta Murata  <mrkn@mrkn.jp>
+
+	* ext/bigdecimal/bigdecimal.c (BigMath_s_exp): move BigMath.exp from
+	  bigdecimal/math.rb.
+
+	* ext/bigdecimal/lib/bigdecimal/math.rb: ditto.
+
+	* test/bigdecimal/test_bigdecimal.rb: move test for BigMath.exp from
+	  test/bigdecimal/test_bigmath.rb.
+
+	* test/bigdecimal/test_bigmath.rb: ditto.
+
 Sat Jun 18 00:20:54 2011  Tadayoshi Funaba  <tadf@dotrb.org>
 
 	* ext/date/date_core.c: do not define wnum[01].
